--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "jsdom": "^25.0.1",
     "npm-run-all2": "^7.0.1",
     "prettier": "^3.3.3",
+    "sass": "^1.80.5",
+    "sass-loader": "^16.0.2",
     "typescript": "~5.6.0",
     "vite": "^5.4.10",
     "vite-plugin-vue-devtools": "^7.5.3",
